# Dashboard_School

./: README.md  app.py  pyproject.toml
assets/: styles.css
data/: province_coordinates.csv
